--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "uploadcare/uploadcare",
-    "description": "Official Uploadcare package for Symfony2"
-    "homepage": "https://github.com/uploadcare/uploadcare-symfony2"
+    "description": "Official Uploadcare package for Symfony2",
+    "homepage": "https://github.com/uploadcare/uploadcare-symfony2",
     "require": {
         "php": ">=5.3.0",
     }
