--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,6 @@
     "description": "Official Uploadcare package for Symfony2",
     "homepage": "https://github.com/uploadcare/uploadcare-symfony2",
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=5.3.0"
     }
 }
